--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "gl-matrix": "^3.3.0",
+    "jszip": "^3.5.0",
     "ts-loader": "^7.0.4",
     "typescript": "^4.1.3",
     "webpack": "^4.44.2",
