--- a/package.json
+++ b/package.json
@@ -1,18 +1,6 @@
 {
-  "private": true,
   "scripts": {
-    "build": "webpack-cli -p",
-    "start": "webpack-dev-server -d --content-base ./public"
-  },
-  "dependencies": {
-    "copy-webpack-plugin": "^6.4.1",
-    "gl-matrix": "^3.3.0",
-    "jszip": "^3.5.0",
-    "nbt": "^0.8.1",
-    "ts-loader": "^7.0.4",
-    "typescript": "^4.1.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "build": "tsc -b",
+    "watch": "tsc -b -w"
   }
 }
