--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - master
+    paths: 
+      - 'demo/**'
+      - '.github/workflows/deploy.yml'
 
 jobs:
   build-and-deploy:
