Remove nbt dependency from core

--- a/demo/package.json
+++ b/demo/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@webmc/core": "0.0.1",
-    "@webmc/render": "0.0.1"
+    "@webmc/render": "0.0.1",
+    "jszip": "^3.5.0",
+    "nbt": "^0.8.1"
   }
 }
