--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "target": "es2015",
     "module": "commonjs",
-    "lib": ["es2017", "dom"],
+    "lib": [
+      "dom",
+      "es2017",
+      "es2020.bigint"
+    ],
 
     "strict": true,
     "esModuleInterop": true,
