--- a/demo/package.json
+++ b/demo/package.json
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "@webmc/core": "^0.1.1",
+    "@webmc/nbt": "^0.1.1",
     "@webmc/render": "^0.3.0",
-    "jszip": "^3.5.0",
-    "nbt": "^0.8.1"
+    "jszip": "^3.5.0"
   }
 }
