--- a/demo/package.json
+++ b/demo/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "@webmc/demo",
   "private": true,
   "scripts": {
     "build": "webpack-cli -p",
@@ -13,9 +14,9 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "@webmc/core": "^0.1.1",
+    "@webmc/core": "^0.1.3",
     "@webmc/nbt": "^0.1.1",
-    "@webmc/render": "^0.3.0",
+    "@webmc/render": "^0.4.1",
     "jszip": "^3.5.0"
   }
 }
