--- a/package.json
+++ b/package.json
@@ -1,10 +1,45 @@
 {
-  "name": "webmc",
+  "name": "deepslate",
+  "description": "Minecraft library for rendering and reading NBT",
+  "version": "0.7.0",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "exports": {
+    ".": "./lib/core/index.js",
+    "./nbt": "./lib/nbt/index.js",
+    "./render": "./lib/render/index.js"
+  },
   "scripts": {
-    "build": "tsc -b",
-    "watch": "tsc -b -w"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "mocha -r ts-node/register test/**/*.test.ts",
+    "prepublishOnly": "npm run build"
+  },
+  "author": "Misode",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/misode/deepslate.git"
+  },
+  "dependencies": {
+    "pako": "^2.0.3",
+    "gl-matrix": "^3.3.0"
   },
   "devDependencies": {
-    "lerna": "^3.22.1"
-  }
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
+    "@types/pako": "^1.0.1",
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "lib/**/*",
+    "!lib/**/*.tsbuildinfo"
+  ]
 }
