--- a/demo/package.json
+++ b/demo/package.json
@@ -2,19 +2,17 @@
   "name": "deepslate-demo",
   "private": true,
   "scripts": {
-    "build": "webpack-cli -p",
-    "start": "webpack-dev-server -d --content-base ./public"
+    "dev": "vite",
+    "build": "tsc && vite build --base=/deepslate/",
+    "serve": "vite preview --base=/deepslate/"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^6.4.1",
-    "ts-loader": "^7.0.4",
-    "typescript": "^4.1.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "@types/node": "^16.6.1",
+    "typescript": "^4.2.3",
+    "vite": "^2.3.4"
   },
   "dependencies": {
-    "deepslate": "^0.7.0",
-    "jszip": "^3.5.0"
+    "deepslate": "^0.7.3",
+    "jszip": "^3.7.1"
   }
 }
