--- a/package.json
+++ b/package.json
@@ -1,18 +1,38 @@
 {
   "name": "deepslate",
-  "description": "Minecraft library for rendering and reading NBT",
-  "version": "0.7.0",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "description": "Minecraft library for rendering structures",
+  "version": "0.7.5",
+  "main": "./lib/index.js",
+  "unpkg": "./dist/index.min.js",
+  "types": "./lib/index.d.ts",
   "exports": {
-    ".": "./lib/core/index.js",
+    ".": {
+      "browser": "./dist/index.min.js",
+      "import": "./dist/index.esm.js",
+      "default": "./lib/index.js"
+    },
+    "./core": "./lib/core/index.js",
     "./nbt": "./lib/nbt/index.js",
     "./render": "./lib/render/index.js"
   },
+  "typesVersions": {
+    "*": {
+      "core": [
+        "./lib/core/index.d.ts"
+      ],
+      "nbt": [
+        "./lib/nbt/index.d.ts"
+      ],
+      "render": [
+        "./lib/render/index.d.ts"
+      ]
+    }
+  },
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "mocha -r ts-node/register test/**/*.test.ts",
+    "build": "tsc && rollup --config rollup.config.js",
+    "watch": "tsc --watch",
+    "test": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha --require ts-node/register 'test/**/*.test.ts'",
+    "lint": "eslint . --ext .ts",
     "prepublishOnly": "npm run build"
   },
   "author": "Misode",
@@ -22,23 +42,33 @@
     "url": "https://github.com/misode/deepslate.git"
   },
   "dependencies": {
-    "pako": "^2.0.3",
-    "gl-matrix": "^3.3.0"
+    "gl-matrix": "^3.3.0",
+    "pako": "^2.0.3"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "@types/pako": "^1.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "chai": "^4.2.0",
+    "eslint": "^7.27.0",
+    "jszip": "^3.7.1",
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
+    "rollup": "^2.56.2",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.3",
+    "vite": "^2.3.4"
   },
   "publishConfig": {
     "access": "public"
   },
   "files": [
+    "dist/*",
     "lib/**/*",
     "!lib/**/*.tsbuildinfo"
   ]
