--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -2,6 +2,7 @@
 	"extends": "./tsconfig.json",
 	"include": [
     "./**/*.ts",
-		"rollup.config.js"
+		"rollup.config.js",
+		"demo/vite.config.js"
 	]
 }
