--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2015",
-    "module": "esnext",
+    "module": "ES6",
     "lib": [
       "dom",
       "es2017",
@@ -18,6 +18,7 @@
     "moduleResolution": "node",
 
     "composite": true,
+    "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
     "incremental": true
