--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,12 @@
 			"source.fixAll.eslint": true
 		}
 	},
+	"[typescriptreact]": {
+		"editor.codeActionsOnSave": {
+			"source.organizeImports": true,
+			"source.fixAll.eslint": true
+		}
+	},
 	"[javascript]": {
 		"editor.codeActionsOnSave": {
 			"source.organizeImports": true,
