--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-typescript": "^8.2.5",
     "@types/chai": "^4.2.14",
+    "@types/md5": "^2.3.1",
     "@types/mocha": "^8.2.0",
     "@types/pako": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
@@ -40,6 +41,7 @@
     "chai": "^4.2.0",
     "eslint": "^7.27.0",
     "jszip": "^3.7.1",
+    "md5": "^2.3.0",
     "mocha": "^9.1.2",
     "nyc": "^15.1.0",
     "rollup": "^2.56.2",
