--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "gl-matrix": "^3.3.0",
-    "pako": "^2.0.3"
+    "pako": "^2.0.3",
+    "md5": "^2.3.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^20.0.0",
@@ -41,7 +42,6 @@
     "chai": "^4.2.0",
     "eslint": "^7.27.0",
     "jszip": "^3.7.1",
-    "md5": "^2.3.0",
     "mocha": "^9.1.2",
     "nyc": "^15.1.0",
     "rollup": "^2.56.2",
