Add terrain shaper example

--- a/website/examples/biomeColors.json
+++ b/website/examples/biomeColors.json
@@ -28,13 +28,18 @@
 	"minecraft:frozen_ocean": [112,112,214],
 	"minecraft:frozen_river": [160,160,255],
 	"minecraft:giant_spruce_taiga": [129,142,121],
+	"minecraft:old_growth_spruce_taiga": [129,142,121],
 	"minecraft:giant_spruce_taiga_hills": [109,119,102],
 	"minecraft:giant_tree_taiga": [89,102,81],
+	"minecraft:old_growth_pine_taiga": [89,102,81],
 	"minecraft:giant_tree_taiga_hills": [69,79,62],
+	"minecraft:gravelly_hills": [136,136,136],
 	"minecraft:gravelly_mountains": [136,136,136],
+	"minecraft:windswept_gravelly_hills": [136,136,136],
 	"minecraft:ice_spikes": [180,220,220],
 	"minecraft:jungle": [83,123,9],
 	"minecraft:jungle_edge": [98,139,23],
+	"minecraft:sparse_jungle": [98,139,23],
 	"minecraft:jungle_hills": [44,66,5],
 	"minecraft:lukewarm_ocean": [0,0,144],
 	"minecraft:modified_badlands_plateau": [242,180,141],
@@ -43,7 +48,9 @@
 	"minecraft:modified_jungle_edge": [138,179,63],
 	"minecraft:modified_wooded_badlands_plateau": [216,191,141],
 	"minecraft:mountain_edge": [114,120,154],
+	"minecraft:extreme_hills": [96,96,96],
 	"minecraft:mountains": [96,96,96],
+	"minecraft:windswept_hills": [96,96,96],
 	"minecraft:mushroom_field_shore": [160,0,255],
 	"minecraft:mushroom_fields": [255,0,255],
 	"minecraft:nether_wastes": [191,59,59],
@@ -53,6 +60,7 @@
 	"minecraft:savanna": [189,178,95],
 	"minecraft:savanna_plateau": [167,157,100],
 	"minecraft:shattered_savanna": [229,218,135],
+	"minecraft:windswept_savanna": [229,218,135],
 	"minecraft:shattered_savanna_plateau": [207,197,140],
 	"minecraft:small_end_islands": [128,128,255],
 	"minecraft:snowy_beach": [250,240,192],
@@ -61,8 +69,10 @@
 	"minecraft:snowy_taiga_hills": [36,63,54],
 	"minecraft:snowy_taiga_mountains": [89,125,114],
 	"minecraft:snowy_tundra": [255,255,255],
+	"minecraft:snowy_plains": [255,255,255],
 	"minecraft:soul_sand_valley": [94,56,48],
 	"minecraft:stone_shore": [162,162,132],
+	"minecraft:stony_shore": [162,162,132],
 	"minecraft:sunflower_plains": [181,219,136],
 	"minecraft:swamp": [7,249,178],
 	"minecraft:swamp_hills": [47,255,218],
@@ -70,17 +80,22 @@
 	"minecraft:taiga_hills": [22,57,51],
 	"minecraft:taiga_mountains": [51,142,129],
 	"minecraft:tall_birch_forest": [88,156,108],
+	"minecraft:old_growth_birch_forest": [88,156,108],
 	"minecraft:tall_birch_hills": [71,135,90],
 	"minecraft:the_end": [128,128,255],
 	"minecraft:the_void": [0,0,0],
 	"minecraft:warm_ocean": [0,0,172],
 	"minecraft:warped_forest": [73,144,123],
 	"minecraft:wooded_badlands_plateau": [176,151,101],
+	"minecraft:wooded_badlands": [176,151,101],
 	"minecraft:wooded_hills": [34,85,28],
 	"minecraft:wooded_mountains": [80,112,80],
+	"minecraft:windswept_forest": [80,112,80],
 	"minecraft:snowy_slopes": [140, 195, 222],
 	"minecraft:lofty_peaks": [196, 168, 193],
+	"minecraft:jagged_peaks": [196, 168, 193],
 	"minecraft:snowcapped_peaks": [200, 198, 200],
+	"minecraft:frozen_peaks": [200, 198, 200],
 	"minecraft:stony_peaks": [82, 92, 103],
 	"minecraft:grove": [150, 150, 189],
 	"minecraft:meadow": [169, 197, 80],
