--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
   },
   "dependencies": {
     "gl-matrix": "^3.3.0",
-    "pako": "^2.0.3",
-    "md5": "^2.3.0"
+    "md5": "^2.3.0",
+    "pako": "^2.0.3"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
-    "@rollup/plugin-typescript": "^8.2.5",
     "@types/chai": "^4.2.14",
     "@types/md5": "^2.3.1",
     "@types/mocha": "^8.2.0",
@@ -40,12 +39,14 @@
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "chai": "^4.2.0",
+    "esbuild": "^0.12.20",
     "eslint": "^7.27.0",
     "jszip": "^3.7.1",
     "mocha": "^9.1.2",
     "nyc": "^15.1.0",
     "rollup": "^2.56.2",
     "rollup-plugin-dts": "^3.0.2",
+    "rollup-plugin-esbuild": "^4.8.2",
     "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
