--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "rollup --config",
     "dev": "rollup --config --watch",
-    "test": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha --require ts-node/register 'test/**/*.test.ts'",
+    "test": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha --require esbuild-register 'test/**/*.test.ts'",
     "lint": "eslint . --ext .ts",
     "version": "bash scripts/version.sh",
     "prepublishOnly": "npm run build"
@@ -40,6 +40,7 @@
     "@typescript-eslint/parser": "^4.25.0",
     "chai": "^4.2.0",
     "esbuild": "^0.12.20",
+    "esbuild-register": "^3.3.2",
     "eslint": "^7.27.0",
     "jszip": "^3.7.1",
     "mocha": "^9.1.2",
