--- a/website/package.json
+++ b/website/package.json
@@ -21,6 +21,7 @@
     "clsx": "^1.2.1",
     "deepslate": "^0.14.0",
     "gl-matrix": "^3.4.3",
+    "jszip": "^3.10.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
