--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deepslate",
   "description": "Library for rendering and emulating parts of Minecraft",
-  "version": "0.22.4",
+  "version": "0.23.0-beta.1",
   "author": "Misode",
   "license": "MIT",
   "repository": {
